services/security/access/test/vdl.vdl.go
// This file was auto-generated by the veyron vdl tool.
// Source: vdl.vdl

// Package test provides a VDL specification for a service used in the unittest of the acl package.
package test

import (
	// The non-user imports are prefixed with "__" to prevent collisions.
	__veyron2 "v.io/core/veyron2"
	__context "v.io/core/veyron2/context"
	__ipc "v.io/core/veyron2/ipc"
	__vdl "v.io/core/veyron2/vdl"
)

// Any package can define tags (of arbitrary types) to be attached to methods.
// This type can be used to index into a TaggedACLMap.
type MyTag string

func (MyTag) __VDLReflect(struct {
	Name string "v.io/core/veyron2/services/security/access/test.MyTag"
}) {
}

func init() {
	__vdl.Register(MyTag(""))
}

// For this example/unittest, there are three possible values of MyTag,
// each represented by a single-character string.
const Read = MyTag("R")

const Write = MyTag("W")

const Execute = MyTag("X")

// MyObjectClientMethods is the client interface
// containing MyObject methods.
//
// MyObject demonstrates how tags are attached to methods.
type MyObjectClientMethods interface {
	Get(*__context.T, ...__ipc.CallOpt) error
	Put(*__context.T, ...__ipc.CallOpt) error
	Resolve(*__context.T, ...__ipc.CallOpt) error
	NoTags(*__context.T, ...__ipc.CallOpt) error // No tags attached to this.
	AllTags(*__context.T, ...__ipc.CallOpt) error
}

// MyObjectClientStub adds universal methods to MyObjectClientMethods.
type MyObjectClientStub interface {
	MyObjectClientMethods
	__ipc.UniversalServiceMethods
}

// MyObjectClient returns a client stub for MyObject.
func MyObjectClient(name string, opts ...__ipc.BindOpt) MyObjectClientStub {
	var client __ipc.Client
	for _, opt := range opts {
		if clientOpt, ok := opt.(__ipc.Client); ok {
			client = clientOpt
		}
	}
	return implMyObjectClientStub{name, client}
}

type implMyObjectClientStub struct {
	name   string
	client __ipc.Client
}

func (c implMyObjectClientStub) c(ctx *__context.T) __ipc.Client {
	if c.client != nil {
		return c.client
	}
	return __veyron2.GetClient(ctx)
}

func (c implMyObjectClientStub) Get(ctx *__context.T, opts ...__ipc.CallOpt) (err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "Get", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&err); ierr != nil {
		err = ierr
	}
	return
}

func (c implMyObjectClientStub) Put(ctx *__context.T, opts ...__ipc.CallOpt) (err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "Put", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&err); ierr != nil {
		err = ierr
	}
	return
}

func (c implMyObjectClientStub) Resolve(ctx *__context.T, opts ...__ipc.CallOpt) (err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "Resolve", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&err); ierr != nil {
		err = ierr
	}
	return
}

func (c implMyObjectClientStub) NoTags(ctx *__context.T, opts ...__ipc.CallOpt) (err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "NoTags", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&err); ierr != nil {
		err = ierr
	}
	return
}

func (c implMyObjectClientStub) AllTags(ctx *__context.T, opts ...__ipc.CallOpt) (err error) {
	var call __ipc.Call
	if call, err = c.c(ctx).StartCall(ctx, c.name, "AllTags", nil, opts...); err != nil {
		return
	}
	if ierr := call.Finish(&err); ierr != nil {
		err = ierr
	}
	return
}

// MyObjectServerMethods is the interface a server writer
// implements for MyObject.
//
// MyObject demonstrates how tags are attached to methods.
type MyObjectServerMethods interface {
	Get(__ipc.ServerContext) error
	Put(__ipc.ServerContext) error
	Resolve(__ipc.ServerContext) error
	NoTags(__ipc.ServerContext) error // No tags attached to this.
	AllTags(__ipc.ServerContext) error
}

// MyObjectServerStubMethods is the server interface containing
// MyObject methods, as expected by ipc.Server.
// There is no difference between this interface and MyObjectServerMethods
// since there are no streaming methods.
type MyObjectServerStubMethods MyObjectServerMethods

// MyObjectServerStub adds universal methods to MyObjectServerStubMethods.
type MyObjectServerStub interface {
	MyObjectServerStubMethods
	// Describe the MyObject interfaces.
	Describe__() []__ipc.InterfaceDesc
}

// MyObjectServer returns a server stub for MyObject.
// It converts an implementation of MyObjectServerMethods into
// an object that may be used by ipc.Server.
func MyObjectServer(impl MyObjectServerMethods) MyObjectServerStub {
	stub := implMyObjectServerStub{
		impl: impl,
	}
	// Initialize GlobState; always check the stub itself first, to handle the
	// case where the user has the Glob method defined in their VDL source.
	if gs := __ipc.NewGlobState(stub); gs != nil {
		stub.gs = gs
	} else if gs := __ipc.NewGlobState(impl); gs != nil {
		stub.gs = gs
	}
	return stub
}

type implMyObjectServerStub struct {
	impl MyObjectServerMethods
	gs   *__ipc.GlobState
}

func (s implMyObjectServerStub) Get(ctx __ipc.ServerContext) error {
	return s.impl.Get(ctx)
}

func (s implMyObjectServerStub) Put(ctx __ipc.ServerContext) error {
	return s.impl.Put(ctx)
}

func (s implMyObjectServerStub) Resolve(ctx __ipc.ServerContext) error {
	return s.impl.Resolve(ctx)
}

func (s implMyObjectServerStub) NoTags(ctx __ipc.ServerContext) error {
	return s.impl.NoTags(ctx)
}

func (s implMyObjectServerStub) AllTags(ctx __ipc.ServerContext) error {
	return s.impl.AllTags(ctx)
}

func (s implMyObjectServerStub) Globber() *__ipc.GlobState {
	return s.gs
}

func (s implMyObjectServerStub) Describe__() []__ipc.InterfaceDesc {
	return []__ipc.InterfaceDesc{MyObjectDesc}
}

// MyObjectDesc describes the MyObject interface.
var MyObjectDesc __ipc.InterfaceDesc = descMyObject

// descMyObject hides the desc to keep godoc clean.
var descMyObject = __ipc.InterfaceDesc{
	Name:    "MyObject",
	PkgPath: "v.io/core/veyron2/services/security/access/test",
	Doc:     "// MyObject demonstrates how tags are attached to methods.",
	Methods: []__ipc.MethodDesc{
		{
			Name: "Get",
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // error
			},
			Tags: []__vdl.AnyRep{MyTag("R")},
		},
		{
			Name: "Put",
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // error
			},
			Tags: []__vdl.AnyRep{MyTag("W")},
		},
		{
			Name: "Resolve",
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // error
			},
			Tags: []__vdl.AnyRep{MyTag("X")},
		},
		{
			Name: "NoTags",
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // error
			},
		},
		{
			Name: "AllTags",
			OutArgs: []__ipc.ArgDesc{
				{"", ``}, // error
			},
			Tags: []__vdl.AnyRep{MyTag("R"), MyTag("W"), MyTag("X")},
		},
	},
}
